# scoutedge-web

./: .env.local.example  .gitignore  .vercelignore  301-redirect-strategy.md  CLAUDE.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
scoutedge_intelligence/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  KNOWN_ISSUES.md  Makefile  README.md  RUNBOOK.md  fly.toml  pyproject.toml  requirements.txt
scoutedge_intelligence/api/: __init__.py  deps.py  main.py  middleware.py
scoutedge_intelligence/api/routes/: __init__.py  bracket.py  divergence_feedback.py  duel.py  og.py  predict.py  remix.py  ws_live.py
scoutedge_intelligence/artifacts/: params_20260508_0139.json  params_20260508_0210.json
scoutedge_intelligence/scoutedge_intelligence/: __init__.py
scoutedge_intelligence/scoutedge_intelligence/analyst/: __init__.py  divergence.py  triggers.py
scoutedge_intelligence/scoutedge_intelligence/audit/: __init__.py  aggregate.py  attribution.py  calibration.py  metrics.py  walk_forward.py
scoutedge_intelligence/scoutedge_intelligence/claude/: __init__.py  feature_generator.py  translator.py
scoutedge_intelligence/scoutedge_intelligence/db/: __init__.py  models.py  queries.py
scoutedge_intelligence/scoutedge_intelligence/experiments/: __init__.py  ab_runner.py  analysis.py
scoutedge_intelligence/scoutedge_intelligence/features/: __init__.py  divergence.py  fatigue.py  four_factors.py
scoutedge_intelligence/scoutedge_intelligence/models/: __init__.py  dixon_coles.py  elo.py  in_play.py  player_lambda.py  wc_adjustments.py
scoutedge_intelligence/scoutedge_intelligence/scripts/: __init__.py  backfill_match_results.py  poly_snapshot.py  precompute_predictions.py  run_attribution.py  seed_elo.py  team_aliases.py  train_ml.py  weekly_report.py
scoutedge_intelligence/scoutedge_intelligence/sources/: __init__.py  api_football.py  fbref.py  fifa_rankings.py  polymarket.py  sportsbook.py
scoutedge_intelligence/scoutedge_intelligence/synthesis/: __init__.py  engine.py  synthesizer.py  weights.py
scoutedge_intelligence/scoutedge_intelligence/utils/: __init__.py  db_urls.py
scoutedge_intelligence/tests/: conftest.py
scoutedge_intelligence/tests/fixtures/: synthetic_wc.py  wc2022_matches.json
scoutedge_intelligence/tests/integration/: __init__.py  test_e2e_smoke.py  test_full_pipeline.py  test_wc2022_e2e.py
scoutedge_intelligence/tests/unit/: __init__.py  test_ab.py  test_analyst.py  test_api_football.py  test_api_scaffold.py  test_attribution.py  (+45 more)
(+916 files in other folders)
