[project]
name = "scoutedge-intelligence"
version = "0.1.0"
description = "ScoutEdge WC2026 triple-layer probability prediction engine (ML + Polymarket + Sportsbook + Claude)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "ScoutEdge", email = "team@scoutedge.app" }]
license = { text = "Proprietary" }

dependencies = [
    # Core
    "anthropic>=0.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",

    # Data & ML
    "pandas>=2.1.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "statsmodels>=0.14.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",

    # External APIs
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "httpx[socks]>=0.27.0",

    # Utilities
    "schedule>=1.2.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "freezegun>=1.4.0",
    "responses>=0.24.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "types-requests",
    "types-python-dateutil",
    "types-pytz",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scoutedge_intelligence", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers --tb=short"
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
    "slow: marks slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "build", "dist", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
warn_unreachable = true
exclude = ["build/", "dist/", "notebooks/"]

[tool.coverage.run]
source = ["scoutedge_intelligence", "api"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
